--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -9,11 +9,19 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "moduleResolution": "bundler"
-  }
-  // Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
-  // except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
-  //
-  // To make changes to top-level options such as include and exclude, we recommend extending
-  // the generated config; see https://svelte.dev/docs/kit/configuration#typescript
+    "moduleResolution": "bundler",
+    "types": ["svelte", "vitest", "vitest/globals"]
+  },
+  "include": [
+    "src/**/*.d.ts",
+    "src/**/*.ts",
+    "src/**/*.svelte",
+    "src/**/*.spec.ts",
+    "vite.config.*",
+    "vitest.config.*",
+    "vitest.setup.*",
+    ".svelte-kit/ambient.d.ts",
+    ".svelte-kit/types/**/*.d.ts",
+    ".svelte-kit/types/**/*.ts"
+  ]
 }
