--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -1,8 +1,7 @@
 {
-  "release-type": "node",
   "packages": {
     "app": {
-      "package-name": "svelte-template"
+      "release-type": "node"
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
