--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -1,8 +1,9 @@
 {
+  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "packages": {
     "app": {
-      "release-type": "node"
+      "release-type": "node",
+      "package-name": "svelte-template"
     }
-  },
-  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
+  }
 }
