fix: github action error

--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -3,6 +3,7 @@
   "packages": {
     "app": {
       "release-type": "node",
+      "path": "app",
       "package-name": "svelte-template"
     }
   }
