--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -1,10 +1,6 @@
 {
-  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
+  "release-type": "node",
   "packages": {
-    "app": {
-      "release-type": "node",
-      "path": "app",
-      "package-name": "svelte-template"
-    }
+    "app": {}
   }
 }
