--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,7 +1,8 @@
 {
-  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "release-type": "node",
   "packages": {
-    "app": {}
+    "app": {
+      "include-component-in-tag": false
+    }
   }
 }
