fix: Release Pleaseの設定を修正

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,8 +1,7 @@
 {
   "release-type": "node",
+  "include-component-in-tag": false,
   "packages": {
-    "app": {
-      "include-component-in-tag": false
-    }
+    "app": {}
   }
 }
