fix: release-please setting change

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,10 +2,8 @@
   "release-type": "node",
   "include-component-in-tag": false,
   "packages": {
-    "app": {
-      "extra-files": [
-        "release-please-config.json"
-      ]
+    ".": {
+      "package-name": "svelte-template"
     }
   }
 }
